# fortran-playground

./: CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: post_create_command.sh
.devcontainer/vscode_example/: launch.json  settings.json
f90tw/: CMakeLists.txt  gtest_what.h
src/: main.f90
src/advent_of_code/day1/: CMakeLists.txt  main.f90  rotations.f90  test_day1.cpp  test_day1.f90
src/advent_of_code/day2/: CMakeLists.txt  main.f90  ranges.f90  test_day2.cpp  test_day2.f90
src/advent_of_code/day3/: CMakeLists.txt  joltage.f90  main.f90  test_day3.cpp  test_day3.f90
src/advent_of_code/day4/: CMakeLists.txt  main.f90  scrolls.f90  test_day4.cpp  test_day4.f90
src/advent_of_code/day5/: CMakeLists.txt  inventory.f90  main.f90  test_day5.cpp  test_day5.f90
src/util/: CMakeLists.txt  comparison_sort.f90  error.f90  test_comparison_sort.cpp  test_comparison_sort.f90
tests/: CMakeLists.txt  example.f90  test_example_gtest.cpp  test_example_gtest.f90
